# cellmlmanip

./: .appveyor.yml  .codecov.yml  .coveragerc  .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  1.4  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pull_request_template.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: windows.yml
.github/workflows/: coverage.yml  docs.yml  pytest.yml  style.yml  unit-test-pinned.yml  unit-test.yml
cellmlmanip/: .coveragerc  .isort.cfg  __init__.py  _config.py  _singularity_fixes.py  cellml_units.txt  main.py  model.py  parser.py  printer.py  rdf.py  singularity_fixes.py  transpiler.py  units.py  utils.py
cellmlmanip/data/: cellml_1_0.rng  cellml_units.txt
cellmlmanip/mathml2sympy/: __init__.py  transpiler.py
cellmlmanip/units/: __init__.py  definitions.py
docs/: Makefile  build.py
docs/source/: code_generation.rst  conf.py  index.rst  model_api.rst  reading_cellml.rst  units.rst
requirements/: Makefile  README.md  base.in  base.txt  check-python-version.py  dev.in  dev.txt  docs.txt  test.in  test.txt
tests/: __init__.py  conftest.py  shared.py  singularity.txt  test_aslanidi_model.py  test_derivative_symbols.py  test_hodgkin.py  test_mathml2sympy.py  test_model_api.py  test_model_bad_units.py  test_model_dae.py  test_model_evaluation.py  test_model_functions.py  test_model_units.py  test_ode_solving.py  test_parser.py  test_printer.py  test_rdf.py  test_simple_model_units.py  test_singularity.txt  test_singularity2.txt  test_singularity_fixes.py  test_state_symbols.py  test_transpiler.py  test_unit_conversion.py  test_units.py  test_version.py
tests/cellml_files/: 3.4.2.1.component_with_maths.cellml  3.4.2.1.component_with_reactions.cellml  3.4.2.1.component_with_units.cellml  4.algebraic_ode_model.cellml  5.4.2.2.unit_cycle_1.cellml  algebraic.cellml  (+52 more)
